<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.albfernandez</groupId>
	<artifactId>jboss-el</artifactId>
	<version>1.1.3-SNAPSHOT</version>
	<name>JBoss EL</name>
	<description>JBoss EL is a extended EL implementation, distributed with Seam</description>
	<packaging>jar</packaging>
	<properties>
		<maven.compiler.target>8</maven.compiler.target>
		<maven.compiler.source>8</maven.compiler.source>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<junit.jupiter.version>5.13.1</junit.jupiter.version>
	    <junit.platform.version>1.13.1</junit.platform.version>
	    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
	    <maven.failsafe.plugin.version>3.2.5</maven.failsafe.plugin.version>
	</properties>

	<url>https://github.com/albfernandez/jboss-el</url>
	<licenses>
		<license>
			<name>GNU Lesser General Public License</name>
			<url>http://www.gnu.org/copyleft/lesser.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>https://github.com/albfernandez/jboss-el</connection>
		<developerConnection>https://github.com/albfernandez/jboss-el</developerConnection>
		<url>https://github.com/albfernandez/jboss-el</url>
	</scm>
	<developers>
		<developer>
			<name>Alberto Fernández</name>
			<email>infjaf@gmail.com</email>
			<organization>Alberto Fernández</organization>
			<organizationUrl>https://github.com/albfernandez/</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>org.jboss.spec.javax.el</groupId>
			<artifactId>jboss-el-api_2.2_spec</artifactId>
			<version>1.0.2.Final</version>
		</dependency>
		<dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-api</artifactId>
	        <version>${junit.jupiter.version}</version>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-engine</artifactId>
	        <version>${junit.jupiter.version}</version>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
	        <groupId>org.junit.platform</groupId>
	        <artifactId>junit-platform-launcher</artifactId>
	        <version>${junit.platform.version}</version>
	        <scope>test</scope>
	    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-surefire-plugin</artifactId>
	            <version>${maven.surefire.plugin.version}</version>
	            <configuration>
	                </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-failsafe-plugin</artifactId>
	            <version>${maven.failsafe.plugin.version}</version>
	            <configuration>
	                </configuration>
	        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<JBoss-EL-Version>${project.version}</JBoss-EL-Version>
							<Specification-Version>1.0</Specification-Version>
							<Automatic-Module-Name>com.github.albfernandez.seam.el</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>8</source>
					<links>
						<link>https://docs.oracle.com/javase/8/docs/api/</link>
					</links>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<configuration>
					<keyname>${gpg.keyname}</keyname>
					<passphraseServerId>${gpg.keyname}</passphraseServerId>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.7.0</version>
	          <extensions>true</extensions>
	          <configuration>
	            <publishingServerId>central</publishingServerId>
	            <autoPublish>true</autoPublish>
	          </configuration>
	        </plugin>
		</plugins>
	</build>
</project>
